- ADD HybridLogin to the header - ADD responsive to menu and fix overflows

--- a/CSS/TaylorProfiler.less
+++ b/CSS/TaylorProfiler.less
@@ -4,6 +4,7 @@
 	right: 0;
 	opacity: 0.75;
 	z-index: 100;
+	overflow: hidden;
 }
 .floatTime {
     border-top-left-radius: 5px;
@@ -21,7 +22,10 @@
 }
 .floatTime table td {
 }
+
+
 .profiler {
+	overflow: hidden;
 	opacity: 0.75;
 	background-color: #22221F;
 	margin: 1em;
